Fixed issue with recipes being uneven. Changed amount of recipes shown

--- a/style.css
+++ b/style.css
@@ -77,7 +77,9 @@ form#search_movie input{
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 } */
-
+.card {
+  width: 100%;
+}
 /* Card Image */
 .card img {
   display:block;
